--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>com.slack.api</groupId>
             <artifactId>bolt-jetty</artifactId>
-            <version>[1,)</version>
+            <version>1.22.2</version>
         </dependency>
     </dependencies>
 </project>
